fixed uneven column heights

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,26 +21,32 @@ p
   font-size: 30px
   border-bottom: 1px solid black
   margin-left: 10px
-  margin-right: 10px
-  margin-bottom: 65px
+  margin-right: 25px
+  margin-bottom: 55px
   padding-bottom: 20px
   
 #ratingScale
-  list-style-type: none
-  margin-left: 35%
-  padding: 5px  
+  ul
+    list-style-type: none
+    margin-left: 30%
   
+  
+.rowSameHeight
+  overflow: hidden
+  .sameHeight
+    margin-bottom: -99999px
+    padding-bottom: 99999px
+
 .rowLine
   border-bottom: 1px solid black
-  margin-left: 30px
-  margin-right: 10px
+  margin-top: 10px
+  margin-left: 25px
+  margin-right: 25px
   
-.leftDiv, .rightDiv
+.leftDiv, .rightDiv, .centralDiv
   margin-top: 10px
   margin-bottom: 10px
-  padding: 5px
-  //display: table-cell
-  
+  padding: 10px
 
 .leftDiv
   border-right: 1px solid black
@@ -51,19 +57,42 @@ p
 .questionList
   list-style-type: none
   li
-    margin-bottom: 30px
+    margin-left: -25px
+    margin-bottom: 28px
     margin-right: 15px
   table
     margin-right: 2px
     float: right
   p
     clear: right
-  p, table
+  p, table, .formInputLine
     display: inline-block
   h4
     text-align: center
+    
+.smallList
+  list-style-type: none
+  p
+    font-size: 15px
+    margin: 0px
+  li
+    margin-bottom: 10px
     
 .formCell
   height: 30px
   width: 30px
   border: 3px solid black
+  font-style: italic
+  font-size: 15px
+  text-align: center
+  
+.formLineTable
+  td
+    padding-top: 10px
+  
+.formInputLine
+  height: 25px
+  font-size: 18px
+  font-style: italic
+  text-align: center
+  border-bottom: 1px solid black
